# Monte-Carlo-methods

./: CMakeLists.txt
lab01/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab01/include/: utils.hpp
lab01/results/: task1_a17_step1.csv  task1_a17_step2.csv  task1_a85_step1.csv  task1_a85_step2.csv  task2_step1.csv  task2_step2.csv  task3_results.csv  task4_results.csv
lab01/src/: utils.cpp
scripts/: plot.py
